# MyBuddy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/mybuddy/: cli.py  db.py  models.py  web.py
src/mybuddy/routes/: actions.py  contacts.py  notes.py
src/mybuddy/services/: ai.py
src/mybuddy/static/: style.css
src/mybuddy/templates/: base.html
src/mybuddy/templates/actions/: list.html
src/mybuddy/templates/contacts/: detail.html  list.html
src/mybuddy/templates/notes/: detail.html  form.html  list.html
tests/: test_db.py  test_routes.py
